  of possible telephone numbers in wiki pages' output in Safari on iOS; this can
  be re-enabled if you wish, or locally extended for other browsers' quirks.
* …

==== Changed configuration ====
* $wgMaxImageArea - This setting may now be set to false to disable size
  checking before scaling. Extensions can still override its value by
  using the BitmapHandlerCheckImageArea hook.
* …

==== Removed configuration ====
* $wgShellLocale - This setting has been removed as it was a flawed solution
  to the problem of locale dependence, MediaWiki will now always set a locale
  of C.UTF-8 or C and works around the remaining problems of the C locale by
  not using escapeshellarg. This follows the direction of PHP 8.0, which sets
  a locale of C by default instead of respecting LC_CTYPE.
* $wgLoggedOutMaxAge - Experiment removed, originally added in 1.35. (T293848)
* $wgIncludejQueryMigrate - Deprecated in 1.36. We only support jQuery v3.
* …

=== New user-facing features in 1.38 ===
* …

=== New developer features in 1.38 ===
* Added a deleteUserEmail maintenance script - This file enables the deletion
  of a given user's associated email address. It can be helpful for
  privacy-preserving operations.
* …

=== External library changes in 1.38 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated WVUI from v0.3.0 to v0.3.2
* Updated wikimedia/parsoid from v0.14.0-a14 to v0.15.0-a1.
* Updated wikimedia/purtle from 1.0.7 to 1.0.8.
* Updated wikimedia/shellbox from 2.0.0 to 2.1.0.
* Updated pear/mail_mime from 1.10.9 to 1.10.11.
* Updated pear/net_smtp from 1.9.2 to 1.10.0.
* Updated psr/log from 1.1.3 to 1.1.4.
* Updated wikimedia/wrappedstring from 3.2.0 to 4.0.1.
* …

===== Changed development-only external libraries =====
* Updated doctrine/dbal for PHP < 7.3 from 2.10.4 to 2.13.3.
* Updated doctrine/dbal for PHP >= 7.3 from 3.0.0 to 3.1.2.