@@ -1784,21 +1784,21 @@ $wgImagePreconnect = false;
 /**
  * Path of the djvudump executable
  * Enable this and $wgDjvuRenderer to enable djvu rendering
- * example: $wgDjvuDump = 'djvudump';
+ * example: $wgDjvuDump = '/usr/bin/djvudump';
  */
 $wgDjvuDump = null;
 
 /**
  * Path of the ddjvu DJVU renderer
  * Enable this and $wgDjvuDump to enable djvu rendering
- * example: $wgDjvuRenderer = 'ddjvu';
+ * example: $wgDjvuRenderer = '/usr/bin/ddjvu';
  */
 $wgDjvuRenderer = null;
 
 /**
  * Path of the djvutxt DJVU text extraction utility
  * Enable this and $wgDjvuDump to enable text layer extraction from djvu files
- * example: $wgDjvuTxt = 'djvutxt';
+ * example: $wgDjvuTxt = '/usr/bin/djvutxt';
  */
 $wgDjvuTxt = null;
 
@@ -1813,6 +1813,14 @@ $wgDjvuPostProcessor = 'pnmtojpeg';
  * File extension for the DJVU post processor output
  */
 $wgDjvuOutputExtension = 'jpg';
+
+/**
+ * Shell to use when getting djvu metadata
+ *
+ * @var string
+ * @since 1.37
+ */
+$wgDjvuShell = '/bin/sh';
 
 // endregion -- end of DJvu
 
